paper submission draft

--- a/latex/components/benchmarks.tex
+++ b/latex/components/benchmarks.tex
@@ -14,7 +14,7 @@ Lost Pig & 1 & 1000 & 4 & 1 & 1000 & 4 \\
 Anchorhead & 0 & 1000 & 24 & 0 & 1000 & 19 \\
 Curses & 0 & 1000 & 4 & 0 & 1000 & 5 \\
 Adventure & 36 & 1000 & 11 & 36 & 1000 & 8 \\
-Zork 1 & 0 & 1000 & 18 & 0 & 1000 & 13 \\
+Zork I & 0 & 1000 & 18 & 0 & 1000 & 13 \\
 9:05 & 0 & 1000 & 5 & 0 & 1000 & 5 \\
 \bottomrule
 \end{tabular}
