--- a/latex/paper/lessons.tex
+++ b/latex/paper/lessons.tex
@@ -1,1 +1,18 @@
 \section{Lessons learned}
+
+Most of the lessons learned in this project are within the domain of
+logic-based artificial intelligence. I learned how to implement
+tell, store, unify and fetch algorithms for a first-order logic
+knowledge base. I learned how to adapt those algorithms to accommodate
+temporal states, and to add a linear implication operator. I learned how
+to implement forward chaining to make inferences from observations and
+implications. I also learned a tiny bit about knowledge engineering and
+ways to frame logical sentences about cause and effect relationships in
+a way that would be relevant to an AI agent.
+
+I learned how to work with the predominant framework in the study of AI
+agents for text-based games, TextWorld\cite{cote_textworld_2019}, and
+how to create my own procedural generation models in that framework.
+I read a number of papers about different techniques for approaching
+text-based games, techniques that I look forward to exploring more in
+the future, and potentially incorporating into my own work.
