--- a/latex/text-based-worlds.bib
+++ b/latex/text-based-worlds.bib
@@ -12,6 +12,21 @@
  year = {2019}
 }
 
+@misc{blank_zork_1980,
+ author = {Blank, Mark and Lebling, Dave and Daniels, Bruce and Anderson, Tim},
+ publisher = {Infocom},
+ title = {Zork {I}},
+ url = {https://ifdb.org/viewgame?id=0dbnusxunq7fw5ro},
+ year = {1980}
+}
+
+@misc{cadre_905_2000,
+ author = {Cadre, Adam},
+ title = {9:05},
+ url = {https://ifdb.org/viewgame?id=qzftg3j8nh5f34i2},
+ year = {2000}
+}
+
 @inproceedings{cote_textworld_2019,
  abstract = {We introduce TextWorld, a sandbox learning environment for the training and evaluation of RL agents on text-based games. TextWorld is a Python library that handles interactive play-through of text games, as well as backend functions like state tracking and reward assignment. It comes with a curated list of games whose features and challenges we have analyzed. More significantly, it enables users to handcraft or automatically generate new games. Its generative mechanisms give precise control over the difficulty, scope, and language of constructed games, and can be used to relax challenges inherent to commercial text games like partial observability and sparse rewards. By generating sets of varied but similar games, TextWorld can also be used to study generalization and transfer learning. We cast text-based games in the Reinforcement Learning formalism, use our framework to develop a set of benchmark games, and evaluate several baseline agents on this set and the curated list.},
  address = {Cham},
@@ -29,6 +44,13 @@
  year = {2019}
 }
 
+@misc{crowther_adventure_1976,
+ author = {Crowther, William and Woods, Donald},
+ title = {Adventure},
+ url = {https://ifdb.org/viewgame?id=fft6pu91j85y4acv},
+ year = {1976}
+}
+
 @article{dambekodi_playing_2020,
  abstract = {Text based games are simulations in which an agent interacts with the world purely through natural language. They typically consist of a number of puzzles interspersed with interactions with common everyday objects and locations. Deep reinforcement learning agents can learn to solve these puzzles. However, the everyday interactions with the environment, while trivial for human players, present as additional puzzles to agents. We explore two techniques for incorporating commonsense knowledge into agents. Inferring possibly hidden aspects of the world state with either a commonsense inference model COMET, or a language model BERT. Biasing an agents exploration according to common patterns recognized by a language model. We test our technique in the 9to05 game, which is an extreme version of a text based game that requires numerous interactions with common, everyday objects in common, everyday scenarios. We conclude that agents that augment their beliefs about the world state with commonsense inferences are more robust to observational errors and omissions of common elements from text descriptions.},
  author = {Dambekodi, Sahith and Frazier, Spencer and Ammanabrolu, Prithviraj and Riedl, Mark O.},
@@ -40,6 +62,13 @@
  url = {http://arxiv.org/abs/2012.02757},
  urldate = {2022-04-14},
  year = {2020}
+}
+
+@misc{gentry_anchorhead_1998,
+ author = {Gentry, Michael},
+ title = {Anchorhead},
+ url = {https://ifdb.org/viewgame?id=op0uw1gn1tjqmjt7},
+ year = {1998}
 }
 
 @article{haroush_learning_2018,
@@ -92,6 +121,13 @@
  urldate = {2022-05-02}
 }
 
+@misc{jota_lost_2007,
+ author = {Jota, Adam},
+ title = {Lost {Pig}},
+ url = {https://ifdb.org/viewgame?id=mohwfk47yjzii14w},
+ year = {2007}
+}
+
 @inproceedings{kostka2017text,
  author = {Kostka, Bartosz and Kwiecieli, Jaroslaw and Kowalski, Jakub and Rychlikowski, Pawel},
  booktitle = {2017 {IEEE} conference on computational intelligence and games ({CIG})},
@@ -101,12 +137,53 @@
  year = {2017}
 }
 
+@misc{nelson_curses_1993,
+ author = {Nelson, Graham},
+ title = {Curses},
+ url = {https://ifdb.org/viewgame?id=plvzam05bmz3enh8},
+ year = {1993}
+}
+
 @misc{noauthor_adventure_2010,
  month = {December},
  title = {Adventure},
  url = {https://web.archive.org/web/20101227192243/http://www.wurb.com/if/game/1},
  urldate = {2022-05-01},
  year = {2010}
+}
+
+@misc{noauthor_curses_2022,
+ abstract = {Curses is an interactive fiction computer game created by Graham Nelson in 1993. Appearing in the beginning of the non-commercial era of interactive fiction, it is considered one of the milestones of the genre.
+Writing for The New York Times, Edward Rothstein described the game as "acclaimed."},
+ copyright = {Creative Commons Attribution-ShareAlike License},
+ journal = {Wikipedia},
+ language = {en},
+ month = {April},
+ note = {Page Version ID: 1082604883},
+ title = {Curses},
+ url = {https://en.wikipedia.org/w/index.php?title=Curses_(video_game)&oldid=1082604883},
+ urldate = {2022-05-19},
+ year = {2022}
+}
+
+@misc{noauthor_zork_2022,
+ abstract = {Zork: The Great Underground Empire - Part I, later known as Zork I, is an interactive fiction computer game written by Marc Blank, Dave Lebling, Bruce Daniels, and Tim Anderson and published by Infocom in 1980. It was the first game in the Zork trilogy and was released for a wide range of computer systems, followed by Zork II and Zork III. It was Infocom's first game, and sold 378,000 copies by 1986.},
+ copyright = {Creative Commons Attribution-ShareAlike License},
+ journal = {Wikipedia},
+ language = {en},
+ month = {April},
+ note = {Page Version ID: 1081245440},
+ title = {Zork {I}},
+ url = {https://en.wikipedia.org/w/index.php?title=Zork_I&oldid=1081245440},
+ urldate = {2022-05-19},
+ year = {2022}
+}
+
+@misc{plotkin_hunter_1999,
+ author = {Plotkin, Andrew},
+ title = {Hunter, in {Darkness}},
+ url = {https://ifdb.org/viewgame?id=mh1a6hizgwjdbeg7},
+ year = {1999}
 }
 
 @misc{ricks_byu-agent-2016_2019,
