--- a/latex/paper/abstract.tex
+++ b/latex/paper/abstract.tex
@@ -1,15 +1,10 @@
 \begin{abstract}
     Text-based games, also called text adventures or interactive
-    fiction, are a form of parser-driven text-based worlds where players
-    control a Player Character in an immersive environment. Players
-    interact with the environment by issuing text commands such as, ``go
-    west'' or ``unlock the door with the bronze key'' and the game gives
-    feedback in the form of natural language scene descriptions, e.g.
-    ``You are standing in an open field west of a white house, with a
-    boarded front door'' (Zork, Infocom, 1981). I would like to use
-    pre-trained GloVe word embeddings to aid in parsing scene
-    descriptions and action exploration, and, which in turn will be used
-    to train a knowledge base that will be used for goal completion,
-    with the hope that this will allow for effective knowledge transfer
-    between a wide array of text adventure games.
+    fiction, are a form of games meant to evoke reading a work of
+    fiction, where the player controls the main character, popularized
+    in the 1980s by games like Zork I\cite{blank_zork_1980}. Players
+    interact with the environment through text commands and the game
+    gives feedback in the form of natural language descriptions. I
+    developed the beginnings of a knowledge and logic-based agent to
+    leverage logical reasoning in solving rudimentary text-based games.
 \end{abstract}
